BUG: 11808 HSMP Home Page: Progress message for charts partially visible in the carousel
QA: Progress message should now be fully visible (the tick lines will still show up on top of it, but the y-axis labels should be out of the way)

--- a/app/styles/charts.sass
+++ b/app/styles/charts.sass
@@ -478,7 +478,8 @@
 .mondrian .overlayContainer
   .dsgProgress
     @include dataset-sidebar-icons
-    max-width: 400px
+    width: 40em
+    max-width: 75%
     margin-left: auto
     margin-right: auto
     overflow: hidden
